alertMe function added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
   </div>
   <script type="text/javascript">
     document.getElementById("entrybutton").addEventListener("click", alertMe)
+    function alertMe() {
+
+    }
   </script>
 </body>
 
