--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <script type="text/javascript">
     document.getElementById("entrybutton").addEventListener("click", alertMe)
     function alertMe() {
-
+      var entryinput = document.getElementById("entryinput").value;
+      alert("Haris: " + entryinput);
     }
   </script>
 </body>
