results value change added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     function alertMe() {
       var entryinput = document.getElementById("entryinput").value;
       alert("Haris: " + entryinput);
+      document.getElementById("textoutput").innerHTML = entryinput;
     }
   </script>
 </body>
