--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <script type="text/javascript">
     document.getElementById("entrybutton").addEventListener("click", alertMe)
     function alertMe() {
-      var entryinput = document.getElementById("entryinput").value;
-      alert("Haris: " + entryinput);
-      document.getElementById("textoutput").innerHTML = entryinput;
+      var entryInput = document.getElementById("entryinput").value;
+      alert("Haris: " + entryInput);
+      document.getElementById("textoutput").innerHTML = entryInput;
     }
   </script>
 </body>
