alert box: full name added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     document.getElementById("entrybutton").addEventListener("click", alertMe)
     function alertMe() {
       var entryInput = document.getElementById("entryinput").value;
-      alert("Haris: " + entryInput);
+      alert("Haris Uddin: " + entryInput);
       document.getElementById("textoutput").innerHTML = entryInput;
     }
   </script>
